# samsung-ad-generator

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  audio_agent.py  music_agent.py  pipeline.py  script_agent.py  storyboard_agent.py  video_agent.py
backend/app/api/v1/: ab_tests.py  analytics.py  auth.py  collaboration.py  payments.py  products.py  projects.py  public_api.py  router.py  scripts.py  storyboard.py  templates.py  users.py  videos.py  voices.py
backend/app/core/: __init__.py  config.py  security.py  security_middleware.py  security_utils.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  payment.py  product.py  project.py  template.py  user.py  video.py
backend/app/services/: ab_testing_service.py  ai_optimizer_service.py  analytics_service.py  api_key_service.py  brand_guidelines.py  collaboration_service.py  payment_service.py  social_media_service.py  webhook_service.py
backend/app/tasks/: __init__.py  celery_app.py  video_tasks.py
docs/: API.md  ARCHITECTURE.md  PRD.md  ROADMAP.md
frontend/: .env.example  Dockerfile  Dockerfile.prod  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  (+1 more)
infrastructure/terraform/: main.tf
nginx/: nginx.conf
(+44 files in other folders)
